<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="https://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="https://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.jbellis</groupId>
        <artifactId>jvector-parent</artifactId>
        <version>${revision}</version>
    </parent>
    <artifactId>jvector-native</artifactId>
    <name>Native</name>
    <properties>
        <native.buildtype>release</native.buildtype>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>22</release>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.vector</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!--Disable filtering for resources plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>so</nonFilteredFileExtension>
                        <nonFilteredFileExtension>dll</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <skip>false</skip>
                    <argLine>
                        --add-modules jdk.incubator.vector
                        --enable-native-access=ALL-UNNAMED
                        -Djvector.experimental.enable_native_vectorization=true
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>native.debug</id>
            <activation>
                <property>
                    <name>native.debug</name>
                </property>
            </activation>
            <properties>
                <native.buildtype>debug</native.buildtype>
            </properties>
        </profile>
        <profile>
            <id>native.debugoptimized</id>
            <activation>
                <property>
                    <name>native.debugoptimized</name>
                </property>
            </activation>
            <properties>
                <native.buildtype>debugoptimized</native.buildtype>
            </properties>
        </profile>
        <profile>
            <id>native.release</id>
            <activation>
                <property>
                    <name>native.release</name>
                </property>
            </activation>
            <properties>
                <native.buildtype>release</native.buildtype>
            </properties>
        </profile>
        <profile>
            <id>unix-amd64-profile</id>
            <activation>
                <os>
                    <family>unix</family>
                    <arch>amd64</arch>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-enforcer-plugin</artifactId>
                        <version>3.2.1</version>
                        <executions>
                            <execution>
                                <id>enforce-java</id>
                                <goals>
                                    <goal>enforce</goal>
                                </goals>
                                <configuration>
                                    <rules>
                                        <requireJavaVersion>
                                            <version>[20,)</version>
                                        </requireJavaVersion>
                                        <requireProfileIdsExist/>
                                        <requireProperty>
                                            <property>native.buildtype</property>
                                            <regex>^(debug|debugoptimized|release)$</regex>
                                            <regexMessage>native.buildtype must be one of: debug, debugoptimized, release. Use -Dnative.debug, -Dnative.debugoptimized, or -Dnative.release to set it.</regexMessage>
                                        </requireProperty>
                                    </rules>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>execute-jextract-compile-script</id>
                                <phase>generate-resources</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>./jextract_vector_simd.sh</executable>
                                    <arguments>
                                        <argument>${native.buildtype}</argument>
                                    </arguments>
                                    <skip>false</skip>
                                    <workingDirectory>${project.basedir}/src/main/native/</workingDirectory>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>windows-amd64-profile</id>
            <activation>
                <os>
                    <family>windows</family>
                    <arch>amd64</arch>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-enforcer-plugin</artifactId>
                        <version>3.2.1</version>
                        <executions>
                            <execution>
                                <id>enforce-java</id>
                                <goals>
                                    <goal>enforce</goal>
                                </goals>
                                <configuration>
                                    <rules>
                                        <requireJavaVersion>
                                            <version>[20,)</version>
                                        </requireJavaVersion>
                                        <requireProfileIdsExist/>
                                        <requireProperty>
                                            <property>native.buildtype</property>
                                            <regex>^(debug|debugoptimized|release)$</regex>
                                            <regexMessage>native.buildtype must be one of: debug, debugoptimized, release. Use -Dnative.debug, -Dnative.debugoptimized, or -Dnative.release to set it.</regexMessage>
                                        </requireProperty>
                                    </rules>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>execute-jextract-compile-script</id>
                                <phase>generate-resources</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>powershell.exe</executable>
                                    <arguments>
                                        <argument>-ExecutionPolicy</argument>
                                        <argument>Bypass</argument>
                                        <argument>-File</argument>
                                        <argument>./build_windows.ps1</argument>
                                        <argument>${native.buildtype}</argument>
                                    </arguments>
                                    <skip>false</skip>
                                    <workingDirectory>${project.basedir}/src/main/native/</workingDirectory>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <dependencies>
        <dependency>
            <groupId>io.github.jbellis</groupId>
            <artifactId>jvector-base</artifactId>
            <version>${project.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>commons-math3</artifactId>
                    <groupId>org.apache.commons</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.github.jbellis</groupId>
            <artifactId>jvector-twenty</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.carrotsearch.randomizedtesting</groupId>
            <artifactId>randomizedtesting-runner</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
        </dependency>
    </dependencies>
</project>
